# secnano

./: .env.example  .gitignore  README.md  findings.md  history.md  progress.md  pyproject.toml  task_plan.md  当前开发计划.md
agent_runner/: __init__.py  main.py  tools.py
data/: secnano.db  secnano.db-shm  secnano.db-wal
docs/: README.md  architecture_v2.md  architecture_v2_zh.md  development_milestones.md  devplan.md  migration_plan_v2.md  migration_plan_v2_zh.md  module_boundary_checklist.md  module_mapping_v2.md  module_mapping_v2_zh.md  plan.zh-CN.md  project_progress.md
docs/architecture/: subagent-runtime-design.zh-CN.md
docs/decisions/: ADR-001-branch-boundary.md
docs/mapping/: main-to-v2-mapping.md  main-to-v2-mapping.zh-CN.md
docs/migration/: migration-strategy.md
docs/plan/: phase-0-5-completion-matrix.zh-CN.md  roadmap.md  roadmap.zh-CN.md
docs/plans/: 2026-03-30-ai-execution-instructions.md  (+2 more)
refs/: legacy-index.md
refs/pyclaw/: bootstrap.py  env.py  (+5 more)
scripts/: README.md
secnano/: __init__.py  __main__.py  _subagent.py  adapters_command.py  agent_loop.py  archive.py  audit_command.py  bootstrap.py  cli.py  config.py  context.py  control_plane.py  db.py  delegate_command.py  doctor.py  env.py  group_folder.py  group_queue.py  ingress.py  ipc.py  ipc_auth.py  ipc_watcher.py  ipc_writer.py  llm_client.py  logger.py  logging_utils.py  main.py  models.py  ops_view.py  paths.py  roles.py  roles_commands.py  router.py  runtime.py  runtime_bridge.py  runtime_checks.py  runtime_command.py  runtime_db.py  runtime_orchestration.py  scheduler.py  (+8 more)
secnano_v2/: __init__.py  __main__.py
src/: README.md
tests/: README.md  test_devplan_d0.py  test_ipc_cli.py  test_ops_view.py  test_phase1_integration.py  test_runtime_orchestration.py  test_tasks_cli.py  test_trace_events.py  test_web_channel.py  test_worker_pool.py
(+65 files in other folders)
