[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secnano"
version = "0.1.0"
description = "Secure single-controller orchestration layer with temporary nanobot compatibility package"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40.0",
    "aiosqlite>=0.19.0",
    "croniter>=1.4.0",
]

[tool.setuptools.packages.find]
include = ["secnano*"]
