[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secnano"
version = "0.1.0"
description = "A Python AI agent orchestrator with subprocess isolation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "croniter>=2.0.0",
    "ruff>=0.15.7",
    "structlog>=24.0.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
secnano = "secnano.main:main_cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["secnano", "agent_runner"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
